--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ownRestaurant</title>
 
-    <script>
-      const API_KEY = import.meta.env.VITE_API_CAPTCHA;
+    <!-- <script>
+      const API_KEY = '6LdfetoqAAAAAO8VCtYsNM5z4n3Hoa898wIn2Q2-';
       function onClick(e) {
         e.preventDefault();
         grecaptcha.enterprise.ready(async () => {
-          const token = await grecaptcha.enterprise.execute(
-            API_KEY,
-            {
-              action: 'LOGIN',
-            }
-          );
+          const token = await grecaptcha.enterprise.execute(API_KEY, {
+            action: 'LOGIN',
+          });
         });
       }
-    </script>
+    </script> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
