--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         });
       }
     </script> -->
-
+    <link rel="icon" type="image/x-icon" href="./public/favbg.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
