added acc info for log in like user and admin

--- a/index.html
+++ b/index.html
@@ -6,18 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ownRestaurant</title>
 
-    <!-- <script>
-      const API_KEY = '6LdfetoqAAAAAO8VCtYsNM5z4n3Hoa898wIn2Q2-';
-      function onClick(e) {
-        e.preventDefault();
-        grecaptcha.enterprise.ready(async () => {
-          const token = await grecaptcha.enterprise.execute(API_KEY, {
-            action: 'LOGIN',
-          });
-        });
-      }
-    </script> -->
-    <link rel="icon" type="image/x-icon" href="./public/favbg.png" />
+    <link rel="icon" type="image/x-icon" href="/favbg.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
